--- a/example/index.html
+++ b/example/index.html
@@ -119,13 +119,15 @@
     function initMap() {
         const map = new google.maps.Map(document.getElementById("map"), {
             center: {
-                lat: 30.3079827,
-                lng: -97.8934852
+                lat: 31.9686,
+                lng: -99.9018
             },
             zoom: 6
         });
         mapList = new MapList(map, list, {
             sites: sites,
+            orderByNearest: true, // Defaults to false
+            showSitesInMapBoundsOnly: true, // Defaults to false
             renderListDebounce: 300, // Defaults to 300
             listItemClass: 'item', // Defaults to 'item'
             listItemHoverClass: 'selected', // Defaults to 'selected'
@@ -196,6 +198,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="sites.js"></script>
 <script src="map-list.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=[your-key]&libraries=places&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDp4Yx1KBENn6QkWMoyQKIxmkq7CLbPt_8&libraries=places&callback=initMap"></script>
 </body>
 </html>
