--- a/example/index.html
+++ b/example/index.html
@@ -42,7 +42,7 @@
 
         #list {
             width: 300px;
-            height: 100%;
+            height: calc(100vh - 58px);
             overflow: auto;
             padding: 5px 10px;
         }
